--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
-  margin: 0 auto;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -20,18 +17,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-}
-
 h1 {
   font-size: .85rem;
   font-weight: 700;
 }
 
 .example {
-  background: url(https://raw.githubusercontent.com/CreztY/basicNuiReact/main/preview/01.png);
+  background: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/243d09166730489.641cec8617be4.png);
   background-size: cover;
+  background-position: center;
 }
